--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 <html lang="pt-br">
     <head>
-        <title> Pensamento Computacional 2023
+        <title> Barbearia Aluraa </title>
        <meta charset="utf-8">
        <link rel="stylesheet" href="style.css">
         </head>
